--- a/node-ts/package.json
+++ b/node-ts/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^13.13.4",
     "prettier": "^2.0.5",
+    "tsc": "^1.20150623.0",
     "typescript": "^3.8.3"
   }
 }
